# clapdemo

./: Cargo.toml  example.env
src/: main.rs
src/database/: mod.rs  update_database.rs
src/utils/: utils.rs
