[package]
name = "clapdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
ssh2 = { version = "0.9.3" }
home = "0.5.4"
indicatif = "0.11.0"
oracle = "0.5"
dotenv = "0.15"
